<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8c9eff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--해더 뷰-->
    <com.avatye.app.sample.kotlin_cashbutton_sample.HeaderView
        android:id="@+id/component_header_view"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:text="Kotlin" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/base_line_color" />


    <ImageView
        android:id="@+id/image_haru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/image_haru" />


    <TextView
        android:id="@+id/text_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_haru"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/cashbutton_sample_app_koltin"
        android:textColor="#FFF"
        android:textSize="20dp" />


    <!-- region { 캐시버튼 문의 } -->
    <LinearLayout
        android:id="@+id/ly_inquire_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_inquire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/avatye_ic_cashbutton_blue" />

            <TextView
                android:id="@+id/tv_inquire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/cashbutton_inquire"
                android:textColor="#FFF"
                android:textSize="18dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_inquire_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cashbutton_inquire_contents"
            android:textColor="#B6BAF6"
            android:textSize="14dp"
            android:textStyle="bold" />

    </LinearLayout>
    <!-- endregion  -->

    <!-- region {노티바 설정} -->
    <LinearLayout
        android:id="@+id/ly_notibar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/sw_notibar_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_project"
                android:layout_centerHorizontal="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cashbutton_notibar_switch"
                android:textColor="#FFF"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cashbutton_notibar_state"
            android:textColor="#B6BAF6"
            android:textSize="14dp"
            android:textStyle="bold" />
    </LinearLayout>
    <!-- endregion -->



    <!-- region {캐시버튼 설정} -->
    <LinearLayout
        android:id="@+id/ly_cashbutton_and_notibar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/sw_cashbutton_notibar_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_project"
                android:layout_centerHorizontal="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cashbutton_and_notibar_switch"
                android:textColor="#FFF"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cashbutton_and_notibar_state"
            android:textColor="#B6BAF6"
            android:textSize="14dp"
            android:textStyle="bold" />
    </LinearLayout>
    <!-- endregion -->


</LinearLayout>